# h5py-stubs

./: pyproject.toml
