[tool.poetry]
name = "h5py_stubs"
version = "0.2.0"
description = "Type stubs for H5py"
authors = [
    "Matteo Bouvier <m.bouvier@vidium-solutions.com>",
    "Najib Ishaq <najib_ishaq@zoho.com>",
]
license = "MIT"
readme = "README.md"
packages = [
    {include = "h5py-stubs"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=2.0,<3.0"
h5py = ">=3.10,<4.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
